--- a/.mbedignore
+++ b/.mbedignore
@@ -1,5 +1,4 @@
 mbed-os/rtos/*
-mbed-os/features/cellular/
 mbed-os/features/FEATURE_CLIENT/*
 mbed-os/features/FEATURE_COMMON_PAL/*
 mbed-os/features/FEATURE_UVISOR/*
@@ -12,4 +11,15 @@ mbed-os/features/nanostack/*
 mbed-os/features/lorawan/*
 mbed-os/features/lwipstack/*
 mbed-os/features/nvstore/*
+mbed-os/features/FEATURE_LWIP/*
+mbed-os/features/FEATURE_BLE/*
+mbed-os/features/unsupported/*
+mbed-os/features/cellular/*
+mbed-os/features/filesystem/littlefs/*
+mbed-os/features/filesystem/fat/*
 mbed-os/features/device_key/*
+mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F437xG/TARGET_UBLOX_C030/onboard_modem_api.c
+mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F437xG/TARGET_UBLOX_C030/onboard_modem_api.h
+mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F437xG/TARGET_UBLOX_C030/min_battery_voltage.c
+mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F437xG/TARGET_UBLOX_C030/min_battery_voltage.h
+mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F439xI/TARGET_MODULE_UBLOX_ODIN_W2/sdk/ublox-odin-w2-drivers/default_wifi_interface.cpp
